--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,8 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: seasawher/lean
+  TAG_NAME: nightly
 
 jobs:
   build-and-push-image:
@@ -37,5 +38,5 @@ jobs:
       with:
         context: .
         push: ${{ github.event_name != 'pull_request' }}
-        tags: ${{ steps.meta.outputs.tags }}
+        tags: ${{ env.TAG_NAME }}
         labels: ${{ steps.meta.outputs.labels }}
