--- a/.github/workflows/nightly_deploy.yml
+++ b/.github/workflows/nightly_deploy.yml
@@ -1,4 +1,4 @@
-name: Docker Image Deploy
+name: Nightly Image Deploy
 
 on:
   push:
@@ -45,3 +45,5 @@ jobs:
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ steps.meta.outputs.tags }}
         labels: ${{ steps.meta.outputs.labels }}
+        build-args: |
+          LEAN_VERSION=nightly
