--- a/.github/workflows/stable_deploy.yml
+++ b/.github/workflows/stable_deploy.yml
@@ -3,6 +3,11 @@ name: Stable Image Deploy
 on:
   push:
     branches: [ "main" ]
+    paths:
+      - 'Dockerfile'
+      - '**.yml'
+  schedule:
+    - cron: "0 0 1 * *"
 
 env:
   REGISTRY: ghcr.io
