--- a/.github/workflows/feature_deploy.yml
+++ b/.github/workflows/feature_deploy.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ "main" ]
     paths:
-      - 'src/lean4/**'
+      - 'src/**'
       - '**/feature_deploy.yml'
 
 jobs:
